<resources>
    <string name="app_name">BFAA III</string>
    <string name="bffa_submission_munawir_fikri_al_akbari">BFAA - Final Submission (Munawir Fikri Al-akbari)</string>
    <string name="header">header</string>
    <string name="kembali">Kembali</string>
    <string name="favorite_user">Favorite User</string>
    <string name="nama_user">Nama User</string>
    <string name="id">id</string>
    <string name="username">username</string>
    <string name="url">url</string>
    <string name="company">company</string>
    <string name="location">location</string>
    <string name="_0_repository">0 Repository</string>
    <string name="_0_followers">0 Followers</string>
    <string name="_0_following">0 Following</string>
    <string name="detail_avatar">detail_avatar</string>
    <string name="repository">%s Repository</string>
    <string name="followers">%s Followers</string>
    <string name="following">%s Following</string>
    <string name="search_hint">Cari pengguna github disini…</string>
    <string name="img_avatar">img_avatar</string>
    <string name="info">Selamat datang di Aplikasi Github User. Silahkan cari pengguna dengan ketikkan username dan klik tombol Search pada keyboard kamu untuk menampilkan list.</string>
    <string name="string_tv_id">ID : %s</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="by_munawir_fikri_al_akbari">by Munawir Fikri Al-akbari</string>
    <string name="logosplash">logoSplash</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="tambahkan_ke_favorite">TAMBAHKAN KE FAVORITE</string>
    <string name="hapus_fav">HAPUS DARI FAVORITE</string>
    <string name="tambah_fav">TAMBAHKAN KE FAVORITE</string>
    <string name="setel_pengingat_waktu">Setel pengingat pada jam 09:00</string>
    <string name="alarm_message">Find new favorite user on Github</string>
    <string name="aplikasi_github_user">Aplikasi Github User</string>

</resources>