<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryVariant"
    tools:context=".SplashActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        tools:ignore="UselessParent">
        <ImageView
            android:id="@+id/logo_splashScreen"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/github"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/logosplash"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aplikasi_github_user"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginBottom="4dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_munawir_fikri_al_akbari"
            android:textSize="16sp"
            android:textColor="@color/white"
            />
    </LinearLayout>


</RelativeLayout>