<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".DetailActivity">
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:background="@color/primary"
        />

    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/primaryVariant"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/detail_avatar" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kembali"
            android:textColor="@color/white"
            android:layout_marginTop="14dp"
            />
    </LinearLayout>


    <LinearLayout
        android:background="@color/primary"
        android:layout_below="@id/navigation"
        android:layout_width="match_parent"
        android:id="@+id/card_header"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="12dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_detail_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@color/colorAccent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_user"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:id="@+id/tv_detail_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/username"
                    />
                <TextView
                    android:id="@+id/tv_detail_company"
                    android:layout_width="wrap_content"
                    android:gravity="center_vertical"
                    android:drawablePadding="5dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="@string/company"
                    app:drawableStartCompat="@drawable/ic_baseline_location_city_24" />
                <TextView
                    android:id="@+id/tv_detail_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="14sp"
                    android:drawablePadding="5dp"
                    android:textColor="@color/white"
                    android:text="@string/location"
                    app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:background="@color/primary"
        android:layout_below="@id/card_header"
        android:layout_width="match_parent"
        android:id="@+id/card_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="12dp"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/tv_detail_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_repository"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/tv_detail_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_followers"
            android:layout_marginStart="24dp"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/tv_detail_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_following"
            android:layout_marginStart="24dp"
            android:textColor="@color/white"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/tab_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/card_content"
        >
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/secondary"
            app:tabIndicatorHeight="3dp"
            android:background="@color/primary"
            app:tabTextColor="@android:color/white"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

<RelativeLayout
    android:id="@+id/rl_favorite"
    android:layout_width="80dp"
    android:layout_height="80dp"
    android:padding="8dp"
    android:background="@drawable/custom_border3"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="24dp"
    >
  <TextView
      android:id="@+id/tv_fav"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tambahkan_ke_favorite"
      android:textAlignment="center"
      android:textSize="9sp"
      android:drawablePadding="5dp"
      android:textColor="@color/white"
      android:fontFamily="@font/roboto_bold"
      app:drawableTopCompat="@drawable/ic_baseline_favorite_24_white"
      tools:ignore="SmallSp" />
</RelativeLayout>

</RelativeLayout>